<resources>
    <string name="app_name">Parsestagram</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="action_settings">Settings</string>
    <string name="nav_home"></string>
    <string name="nav_cam"></string>
    <string name="nav_notify"></string>
    <string name="nav_profile"></string>
    <string name="nav_search"></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_gridview">Grid</string>
    <string name="nav_list">List</string>
    <string name="nav_tag">Tag</string>
    <string name="nav_saved">Saved</string>
    <string name="instaheart">Heart</string>
</resources>
